// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`responsive-design > 2xl:text-sm 1`] = `
":root, :host {
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@media (width >= 96rem) {
  .\\32 xl\\:text-sm {
    font-size: var(--text-sm);
    line-height: var(--tw-leading, var(--text-sm--line-height));
  }
}"
`;

exports[`responsive-design > 2xl:text-sm 2`] = `
"page,.tw-root,wx-root-portal-content,:host {
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@media (min-width: 96rem) {
  ._2xl_ctext-sm {
    font-size: var(--text-sm);
    line-height: var(--tw-leading, var(--text-sm--line-height));
  }
}"
`;

exports[`responsive-design > space-y-4 cssChildCombinatorReplaceValue string array type 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
:where(.space-y-4 > :not(:last-child)) {
  --tw-space-y-reverse: 0;
  margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
  margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
}
@property --tw-space-y-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-y-reverse: 0;
    }
  }
}"
`;

exports[`responsive-design > space-y-4 cssChildCombinatorReplaceValue string array type 2`] = `
"
    view,text,::before,::after {
      --tw-space-y-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-y-4>view+view,.space-y-4>view+text,.space-y-4>text+view,.space-y-4>text+text {
  --tw-space-y-reverse: 0;
  margin-bottom: calc((var(--spacing) * 4) * var(--tw-space-y-reverse));
  margin-top: calc((var(--spacing) * 4) * (1 - var(--tw-space-y-reverse)));
}"
`;

exports[`responsive-design > space-y-4 cssChildCombinatorReplaceValue string type 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
:where(.space-y-4 > :not(:last-child)) {
  --tw-space-y-reverse: 0;
  margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
  margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
}
@property --tw-space-y-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-y-reverse: 0;
    }
  }
}"
`;

exports[`responsive-design > space-y-4 cssChildCombinatorReplaceValue string type 2`] = `
"
    view,text,::before,::after {
      --tw-space-y-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-y-4>view,text,button,input~view,text,button,input+view,text,button,input~view,text,button,input {
  --tw-space-y-reverse: 0;
  margin-bottom: calc((var(--spacing) * 4) * var(--tw-space-y-reverse));
  margin-top: calc((var(--spacing) * 4) * (1 - var(--tw-space-y-reverse)));
}"
`;

exports[`responsive-design > xl:text-sm 1`] = `
":root, :host {
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@media (width >= 80rem) {
  .xl\\:text-sm {
    font-size: var(--text-sm);
    line-height: var(--tw-leading, var(--text-sm--line-height));
  }
}"
`;

exports[`responsive-design > xl:text-sm 2`] = `
"page,.tw-root,wx-root-portal-content,:host {
  --text-sm: .875rem;
  --text-sm--line-height: calc(1.25/.875);
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@media (min-width: 80rem) {
  .xl_ctext-sm {
    font-size: var(--text-sm);
    line-height: var(--tw-leading, var(--text-sm--line-height));
  }
}"
`;
